--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.2",
+    "@types/file-saver": "^2.0.7",
+    "file-saver": "^2.0.5",
     "next": "16.1.1",
+    "pako": "^2.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
